[AE-1021] Updating test case for Spark 1.3, including spark event log tweak and new test case